[gd_scene load_steps=10 format=2]

[ext_resource path="res://1 - Scenes/Buildings/Building.tscn" type="PackedScene" id=1]
[ext_resource path="res://4 - Resources/Buildings/tower.tres" type="Texture" id=2]
[ext_resource path="res://2 - Scripts/Buildings/Tower.gd" type="Script" id=3]
[ext_resource path="res://3 - Textures/Characters/BowmanRed.png" type="Texture" id=4]
[ext_resource path="res://2 - Scripts/AnimPlayer.gd" type="Script" id=5]
[ext_resource path="res://3 - Textures/UI/highlight.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 56 )

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Tower" instance=ExtResource( 1 )]
script = ExtResource( 3 )
upgrade_tooltips = [ "x2 damage", "+2 range", "x2 fire rate", "x2 damage" ]

[node name="Radius" type="Sprite" parent="." index="0"]
visible = false
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 8, 8 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 48, 48 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 2 )

[node name="DetectionArea" type="Area2D" parent="." index="3"]
position = Vector2( 8, 8 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" index="0"]
modulate = Color( 0.780392, 0.913725, 0.458824, 0.431373 )
shape = SubResource( 1 )

[node name="Character" type="Sprite" parent="." index="4"]
texture = ExtResource( 4 )
offset = Vector2( 8, 2 )
hframes = 5
vframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
root_node = NodePath("../Character")
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
script = ExtResource( 5 )

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_enemy_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_DetectionArea_enemy_exited"]
